# kafkaclient-cpp

./: .coveralls.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.sh  kafkaclient-cpp.sln  kafkaclient-cpp.vcxproj  kafkaclient-cpp.vcxproj.filters  package.json  test.sh  valgrind.sh
include/: kafkaclient-cpp.h
src/: A.cpp  BaseRecords.h  Bits.cpp  Bits.h  Boolean.cpp  Boolean.h  Byte.cpp  Byte.h  ByteArray.cpp  ByteArray.h  ByteBuffer.cpp  ByteBuffer.h  Character.cpp  Character.h  InetSocketAddress.h  Integer.cpp  Integer.h  Long.cpp  Long.h  Object.cpp  Object.h  ObjectArray.cpp  ObjectArray.h  Short.cpp  Short.h  String0.cpp  String0.h  kafkaclient-cpp.cpp
src/common/: Cluster.cpp  Cluster.h  ClusterResource.cpp  ClusterResource.h  Node.cpp  Node.h  PartitionInfo.cpp  PartitionInfo.h  TopicPartition.cpp  TopicPartition.h
src/common/exceptions/: ApiException.cpp  ApiException.h  BrokerNotAvailableException.cpp  BrokerNotAvailableException.h  BufferOverflowException.cpp  BufferOverflowException.h  BufferUnderflowException.cpp  BufferUnderflowException.h  ClusterAuthorizationException.cpp  ClusterAuthorizationException.h  ConcurrentTransactionsException.cpp  ConcurrentTransactionsException.h  ControllerMovedException.cpp  ControllerMovedException.h  CoordinatorLoadInProgressException.cpp  CoordinatorLoadInProgressException.h  CoordinatorNotAvailableException.cpp  CoordinatorNotAvailableException.h  CorruptRecordException.cpp  CorruptRecordException.h  DelegationTokenAuthorizationException.cpp  DelegationTokenAuthorizationException.h  DelegationTokenDisabledException.cpp  DelegationTokenDisabledException.h  DelegationTokenExpiredException.cpp  DelegationTokenExpiredException.h  DelegationTokenNotFoundException.cpp  DelegationTokenNotFoundException.h  DelegationTokenOwnerMismatchException.cpp  DelegationTokenOwnerMismatchException.h  DuplicateSequenceException.cpp  DuplicateSequenceException.h  FencedLeaderEpochException.cpp  FencedLeaderEpochException.h  FetchSessionIdNotFoundException.cpp  FetchSessionIdNotFoundException.h  GroupAuthorizationException.cpp  GroupAuthorizationException.h  GroupIdNotFoundException.cpp  GroupIdNotFoundException.h  (+136 more)
src/common/excptions/: BufferOverflowException.cpp  BufferUnderflowException.cpp  IllegalArgumentException.h  KafkaException.h
src/common/protocol/: ApiKeys.cpp  ApiKeys.h  CommonFields.cpp  CommonFields.h  Errors.cpp  Errors.h
src/common/protocol/types/: ArrayOf.cpp  ArrayOf.h  BoundField.cpp  BoundField.h  Field.cpp  Field.h  Schema.cpp  Schema.h  SchemaException.cpp  Type.h  (+4 more)
src/common/record/: RecordBatch.h
src/common/requests/: AbstractRequest.cpp  AbstractRequest.h  AbstractRequestResponse.cpp  AbstractRequestResponse.h  AbstractResponse.cpp  AbstractResponse.h  ApiVersionsRequest.cpp  ApiVersionsRequest.h  ApiVersionsResponse.cpp  ApiVersionsResponse.h  MetadataRequest.cpp  MetadataRequest.h  MetadataResponse.cpp  MetadataResponse.h  OffsetFetchRequest.cpp  OffsetFetchRequest.h  OffsetFetchResponse.cpp  OffsetFetchResponse.h  RequestUtils.cpp  RequestUtils.h  ResponseHeader.cpp  ResponseHeader.h
src/common/resource/: PatternType.h
src/common/utils/: Arrays.cpp  Arrays.h  ByteUtils.cpp  ByteUtils.h  CollectionUtils.cpp  CollectionUtils.h  Utils.cpp  Utils.h
test/: stdafx.h  test.cpp  test.vcxproj  test.vcxproj.filters
